Spotify API to database

--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ jupyter = "*"
 pep8-naming = "*"
 pytest = "*"
 requests = "*"
+pylint = "*"
 
 [packages]
 fastapi = "*"
@@ -17,6 +18,8 @@ pandas = "*"
 plotly = "*"
 sqlalchemy = "*"
 uvicorn = {extras = ["standard"], version = "*"}
+spotipy = "*"
+python-dotenv = "*"
 
 [requires]
 python_version = "3"
